lab3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-app
    name: frontend-service
spec:
  type: NodePort
  selector:
    app: frontend-app
  ports:
  - port: 3000
    targetPort: 3000
